--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <jool.version>0.9.12</jool.version>
         <app.version>0.0.1</app.version>
         <slf4j-log4j12.version>1.7.5</slf4j-log4j12.version>
+        <postgresql.version>9.1-901.jdbc4</postgresql.version>
+        <gson.version>2.8.1</gson.version>
     </properties>
 
     <dependencies>
@@ -84,6 +86,18 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j-log4j12.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
     </dependencies>
