--- a/airline-development-security-front/package.json
+++ b/airline-development-security-front/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "ngx-bootstrap": "^2.0.0-beta.8",
     "rxjs": "^5.4.2",
     "typescript": "~2.2.0",
     "zone.js": "^0.8.14"
