--- a/airline-development-security-front/tsconfig.json
+++ b/airline-development-security-front/tsconfig.json
@@ -8,12 +8,17 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "@angular/*": ["../node_modules/@angular/*"]
+    },
     "lib": [
       "es2017",
       "dom"
     ]
   }
+
 }
