--- a/airline-development-security-front/package.json
+++ b/airline-development-security-front/package.json
@@ -27,7 +27,7 @@
     "express": "^4.16.2",
     "ngx-bootstrap": "^2.0.0-beta.8",
     "rxjs": "^5.4.2",
-    "typescript": "~2.2.0",
+    "typescript": "2.2.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
